--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
