--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "jspdf": "^2.5.2",
     "lucide-react": "^0.344.0",
@@ -19,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
     "react-to-print": "^3.0.5",
-    "swiper": "^11.2.2"
+    "swiper": "^11.2.2",
+    "tailwind-merge": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
